force-app/main/default/objects/Historical_Data__c/Historical_Data__c.object-meta.xml
<CustomObject>
    <label>Historical Data</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Historical Data #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>