force-app/main/default/objects/Historical_Data__c/fields/Day_Boarding__c.field-meta.xml
<CustomField>
    <fullName>Day_Boarding__c</fullName>
    <label>Day/Boarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>