force-app/main/default/objects/Historical_Data__c/fields/KPI_Type__c.field-meta.xml
<CustomField>
    <fullName>KPI_Type__c</fullName>
    <label>KPI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Virtual Visit (VOD)</fullName>
            </value>
            <value>
                <fullName>Virtual Meeting (VDM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>