force-app/main/default/objects/Historical_Data__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Name</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Historical Data</relationshipLabel>
    <relationshipName>Historical_Data</relationshipName>
    <type>Lookup</type>
</CustomField>