force-app/main/default/objects/Historical_Data__c/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Timeframe</label>
    <length>25</length>
    <type>Text</type>
</CustomField>